# cube3D

./: .duarrfree.c.swp  .gitignore  CMakeLists.txt  Makefile  a.out  cube3D  docs.txt  duarrcalloc.c  duarrfree.c  duarrlen.c  duarrotate.c  error_call.c  file.cub  file_clion.cub  freenret.c  fstsym.c  get_first_found_symbol.c  get_valid_map.c  get_valid_map_two.c  getsympos.c  init_data.c  main.c  main.h  map_work.c  nohavesym.c  noonsym.c  onsymofstr.c  serv_fncs_I.c  sne_noonsym.c  str_no_have_syms.c  stradd.c  valid_fncs.c
get_next_line/: get_next_line.c  get_next_line_utils.c
libft_fncs/: ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_memset.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c
pars_not_reus_fncs/: error_call.c  init_data.c  serv_fncs_I.c  valid_fncs.c
render/: cub_floor.c  cub_hud.c  cub_raycast.c  cub_raycast2.c  cub_raycast3.c  update_world.c
reusable_fncs/: duarrcalloc.c  duarrfree.c  duarrlen.c  duarrotate.c  freenret.c  fstsym.c  get_first_found_symbol.c  getsympos.c  nohavesym.c  noonsym.c  onsymofstr.c  sne_noonsym.c  str_no_have_syms.c  stradd.c  wrongcloser.c
reusable_fncs/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
reusable_fncs/libft_fncs/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_memset.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c
src/: wall.xpm  wall2.xpm  wall3.xpm  wall4.xpm
utils/: cub_checker.c  cub_cleaner.c  cub_error.c  cub_keybinds.c  cub_keybinds.h  cub_line_reader.c  cub_rot.c  cub_setup.c  cub_utils.c  cub_utils2.c  cub_utils4.c  cub_utils5.c  cub_vec.c
world/: cub_cardinal.c  cub_collide.c  cub_map.c  cub_player.c
